# practical-ai-index

./: .env.example  .gitignore  README.md  package-lock.json  package.json
backend/: .env.example  README.md  app.py  example_openrouter.py  openrouter_client.py  pyproject.toml
data/: README.md
docs/: README.md  free-models.md  openrouter-integration.md
src/: README.md
src/app/: globals.css  layout.tsx  page.tsx
src/components/: ModelDetail.tsx  ModelList.tsx
src/data/: mockModels.ts
src/types/: model.ts
